# rust_sandbox

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  genghis-khan.txt  hello.html  output.txt
adv_proj/: Cargo.toml
adv_proj/src/: adv_t.rs  adv_trait.rs  lib.rs  macro_p.rs  main.rs  unsafe_p.rs
bit_tor/: Cargo.toml
bit_tor/src/: b_encoding.rs  encoding.rs  lib.rs  torrent.rs
blockchain_p/: Cargo.toml
blockchain_p/src/: block.rs  blockchain.rs  lib.rs  main.rs
blockchain_p/tests/: mock_run.rs
brain_math/: Cargo.toml
brain_math/src/: gradient_descent.rs  lib.rs  main.rs  normalize.rs  number.rs  standardization.rs
cargo_play/: Cargo.toml
cargo_play/src/: lib.rs  main.rs
clap_test/: Cargo.toml
closure_iter/: Cargo.toml
closure_iter/src/: iterator.rs  lib.rs  main.rs  shirts.rs
collection_proj/: Cargo.toml
collection_proj/src/: main.rs
common_concept/src/: main.rs
enum_proj/: Cargo.toml
enum_proj/src/: main.rs
error_handling/src/: main.rs
fear_the_conr/: Cargo.toml
fear_the_conr/src/: lib.rs  main.rs
generic_proj/: Cargo.toml
generic_proj/src/: aggregator.rs  lifetime.rs  (+1 more)
guess_this/: Cargo.toml
hello_macro_derive/: Cargo.toml
intro/: Cargo.toml
match_proj/: Cargo.toml
module_sys/: Cargo.toml
mt_web_serv/: Cargo.toml
number_regn/: Cargo.toml
number_regn/src/: data_set.rs  lib.rs  main.rs  math.rs  mnist.rs  network.rs
number_regn/src/network/: cvec.rs  value.rs
oop-proj/: Cargo.toml
proc_m/: Cargo.toml
smart_ptr/: Cargo.toml
src/: main.rs
struct_proj/: Cargo.toml
webbest_socket/: Cargo.toml
(+45 files in other folders)
