[package]
name = "number_regn"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.16.1", default-features = false }
rand = "0.8.5"
rand_distr = "0.4.3"
rust-mnist = "0.2.0"
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = "1.0.132"
